# MicroFunction

./: CMakeLists.txt  README.md  main.cpp  zlib解压缩.cpp
SplitStrByWord/: SplitStrByWord.cpp  SplitStrByWord.h
script/: build.bat  build_and_run.bat  clean.bat  run.bat
